# beautifulspoon

./: .gitignore  imgs_scraper.py  pyproject.toml  table_scraper.py
Datascience II/: script.py  table-scraper.py
Datascience II/BeautifulSpoon/: table_scraper.py
Datascience II/beautifulSpoon/: table_scraper.py
Datascience II/tests/: test_lab 2.py
suppenloffel/: table_scraper.py
