[tool.poetry]
name = "datascience ii"
version = "0.1.0"
description = "Dies  sind alle Praktika von dem Kurs Datascience II Sommer 2022"
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
autopep8 = "^1.6.0"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ipykernel = "^6.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
