[tool.poetry]
name = "beautifulspoon"
version = "0.2.5"
description = "beautifulsoup is a library build upon bs4 to provide fast webscrapin"
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
autopep8 = "^1.6.0"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
